--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "knex": "^0.95.2",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
